--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">Cars_Antonio</string>
+    <string name="bienvenidos_a_racing_ensaladas_de_pu_etazos">Bienvenidos a Racing Ensaladas de Puñetazos</string>
+    <string name="Inicio">Comenzar</string>
+    <string name="coche_1">Echeñike GT 5000</string>
+    <string name="coche_2">Rayo ValleNavaja</string>
+    <string name="coche_3">Franchesco Virginidad</string>
+    <string name="coche_4">Autismus Prime Sport</string>
+    <string name="coche_5">Super Deportivo LGTB+</string>
 </resources>
