--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Cars_Antonio</string>
-    <string name="bienvenidos_a_racing_ensaladas_de_pu_etazos">Bienvenidos a Racing Ensaladas de Puñetazos</string>
+    <string name="bienvenidos_a_racing_ensaladas_de_pu_etazos">Bienvenidos a Racing LavaPies GT</string>
     <string name="menu">Circuito LavaPies</string>
     <string name="boton_menu">Pulsa para ver el garaje de coches</string>
     <string name="Inicio">Comenzar</string>
